unsynchronized shadows when resizing ssd windows.
I am seeing unsynchronized transparent shadows when resizing SSD windows. CSD windows do not show this issue. also if I GTK_CSD=1 someappthatUsesSSDwindows, the issue does not show. It's basically like ghost shadows and the next frame border does not have a shadow. I do not see this issue in CSD apps or when using GTK_CSD=1. Qt and GTK SSD windows show this issue. xterm does not have this issue (no NET_WM_SYNC).